# ETUVA-V2-2

./: calculator.py  crosses.py  dessert_game.py  game.py  main.py  pieces.py  pyproject.toml  tetris.py  word.py
