[tool.poetry]
name = "etuva"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
getch = "^1.0"
pyqt5 = "^5.15.2"
colorama = "^0.4.4"
readchar = "^2.0.1"
rock-paper-scissors = "^0.0.2"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
